--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,21 @@
 #graphContainer {
 padding-bottom: 50px;
 }
+
+#header {
+    width: 100%;
+    height: 250px;
+    text-align: center;
+    margin-bottom: 0px;
+}
+
+#headertitle {
+    margin-top: 0px;
+    padding-top: 10px;
+    color: white;
+    font-size: 50px;
+}
+
+#headerparagraph {
+    color: white;
+}
