--- a/src/App.css
+++ b/src/App.css
@@ -6,12 +6,13 @@ padding-bottom: 50px;
     width: 100%;
     height: 250px;
     text-align: center;
-    margin-bottom: 0px;
+    margin-bottom: 20px;
 }
 
 #headertitle {
     margin-top: 0px;
     padding-top: 10px;
+    margin-bottom: 2px;
     color: white;
     font-size: 50px;
 }
@@ -19,3 +20,68 @@ padding-bottom: 50px;
 #headerparagraph {
     color: white;
 }
+
+#headerauthor {
+    color: white;
+    margin-bottom: 0px;
+    margin-top: 0px;
+}
+
+button {
+    background: transparent;
+    border: 0;
+    padding: 0;
+    cursor: pointer;
+    outline: 0;
+    -webkit-appearance: none;
+  }
+
+  #buttoncontainer {
+    width: 80%;
+    margin: 0 auto;
+    text-align: center;
+  }
+  
+  button {
+    display: inline-block;
+    position: relative;
+    padding: 10px 16px;
+    margin: 5px 5px 5px 5px;
+    top: 0;
+    font-size: 14px;
+    border-radius: 4px;
+    border-bottom: 1px solid rgba(0, 93, 155, 0.5);;
+    background: rgba(0, 152, 251, 1 );
+    color: #fff;
+    box-shadow: 0px 0px 0px rgba(4, 0, 255, 0.1);
+    
+    -webkit-transform: translateZ(0);
+       -moz-transform: translateZ(0);
+        -ms-transform: translateZ(0);
+            transform: translateZ(0);
+    
+    -webkit-transition: all 0.2s ease;
+       -moz-transition: all 0.2s ease;
+        -ms-transition: all 0.2s ease;
+            transition: all 0.2s ease;
+  }
+
+  .default{
+    border-bottom: 1px solid rgba(0, 155, 44, 0.5);;
+    background: rgb(0, 251, 100);
+    box-shadow: 0px 0px 0px rgba(0, 255, 17, 0.1);
+  }
+
+  .default:hover{
+    box-shadow: 0px 10px 10px rgba(0, 255, 17, 0.2);
+  }
+  
+  button:hover {
+    top: -10px;
+    box-shadow: 0px 10px 10px rgba(4, 0, 255, 0.2);
+    
+    -webkit-transform: rotateX(20deg);
+       -moz-transform: rotateX(20deg);
+        -ms-transform: rotateX(20deg);
+            transform: rotateX(20deg);
+  }
